--- a/examples/sds_recorder/vcom/mdk/SDS_Recorder.cproject.yml
+++ b/examples/sds_recorder/vcom/mdk/SDS_Recorder.cproject.yml
@@ -1,9 +1,6 @@
 project:
-
-  add-path:
-    - ../../../../sds/include
-    - ../../../../sds/config
   packs:
+   - pack: ARM::SDS
    - pack: Keil::MDK-Middleware
 
   connections:
@@ -18,9 +15,9 @@ project:
 
   components:
     - component: ARM::CMSIS:RTOS2:Keil RTX5&Source
-    # - component: ARM::SDS:Buffer
-    # - component: ARM::SDS:IO:VCOM&MDK USB
-    # - component: ARM::SDS:Recorder
+    - component: ARM::SDS:Buffer
+    - component: ARM::SDS:IO:VCOM&MDK USB
+    - component: ARM::SDS:Recorder
     - component: Keil::USB&MDK-Plus:CORE&Release
     - component: Keil::USB&MDK-Plus:Device
     - component: Keil::USB&MDK-Plus:Device:CDC
@@ -33,11 +30,6 @@ project:
     - group: Source Files
       files:
         - file: ./demo.c
-    - group: sds
-      files:
-        - file: ../../../../sds/source/sds.c
-        - file: ../../../../sds/source/sds_rec.c
-        - file: ../../../../sds/source/sdsio/vcom/mdk/sdsio_vcom.c
 
   layers:
     - layer: $Board-Layer$
